source3/utils/net_usershare.c
@@ -70,7 +70,7 @@ static int net_usershare_add_usage(struct net_context *c, int argc, const char *
 {
 	char chr = *lp_winbind_separator();
 	d_printf(_(
-		"net usershare add [-l|--long] <sharename> <path> [<comment>] [<acl>] [<guest_ok=[y|n]>]\n"
+		"net usershare add [--long] <sharename> <path> [<comment>] [<acl>] [<guest_ok=[y|n]>]\n"
 		"\tAdds the specified share name for this user.\n"
 		"\t<sharename> is the new share name.\n"
 		"\t<path> is the path on the filesystem to export.\n"
@@ -82,7 +82,7 @@ static int net_usershare_add_usage(struct net_context *c, int argc, const char *
 		"\t\tname may be a domain user or group. For local users use the local server name "
 		"instead of \"DOMAIN\"\n"
 		"\t\tThe default acl is \"Everyone:r\" which allows everyone read-only access.\n"
-		"\tAdd -l or --long to print the info on the newly added share.\n"),
+		"\tAdd --long to print the info on the newly added share.\n"),
 		chr, chr );
 	return -1;
 }
@@ -98,10 +98,10 @@ static int net_usershare_delete_usage(struct net_context *c, int argc, const cha
 static int net_usershare_info_usage(struct net_context *c, int argc, const char **argv)
 {
 	d_printf(_(
-		"net usershare info [-l|--long] [wildcard sharename]\n"
+		"net usershare info [--long] [wildcard sharename]\n"
 		"\tPrints out the path, comment and acl elements of shares that match the wildcard.\n"
 		"\tBy default only gives info on shares owned by the current user\n"
-		"\tAdd -l or --long to apply this to all shares\n"
+		"\tAdd --long to apply this to all shares\n"
 		"\tOmit the sharename or use a wildcard of '*' to see all shares\n"));
 	return -1;
 }
@@ -109,10 +109,10 @@ static int net_usershare_info_usage(struct net_context *c, int argc, const char 
 static int net_usershare_list_usage(struct net_context *c, int argc, const char **argv)
 {
 	d_printf(_(
-		"net usershare list [-l|--long] [wildcard sharename]\n"
+		"net usershare list [--long] [wildcard sharename]\n"
 		"\tLists the names of all shares that match the wildcard.\n"
 		"\tBy default only lists shares owned by the current user\n"
-		"\tAdd -l or --long to apply this to all shares\n"
+		"\tAdd --long to apply this to all shares\n"
 		"\tOmit the sharename or use a wildcard of '*' to see all shares\n"));
 	return -1;
 }
@@ -122,8 +122,8 @@ int net_usershare_usage(struct net_context *c, int argc, const char **argv)
 	d_printf(_("net usershare add <sharename> <path> [<comment>] [<acl>] [<guest_ok=[y|n]>] to "
 				"add or change a user defined share.\n"
 		"net usershare delete <sharename> to delete a user defined share.\n"
-		"net usershare info [-l|--long] [wildcard sharename] to print info about a user defined share.\n"
-		"net usershare list [-l|--long] [wildcard sharename] to list user defined shares.\n"
+		"net usershare info [--long] [wildcard sharename] to print info about a user defined share.\n"
+		"net usershare list [--long] [wildcard sharename] to list user defined shares.\n"
 		"net usershare help\n"
 		"\nType \"net usershare help <option>\" to get more information on that option\n\n"));
 
